[package]
name = "trading-sdk-mt-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
trading-sdk-abstractions = {path = "../trading-sdk-abstractions"}
trading-sdk-core ={ path = "../trading-sdk-core" }